objects/Opportunity_Product__c.object
<CustomObject>
    <description>Products related to the opportunity - acting as a junction object</description>
    <fields>
        <fullName>Account_Product_Name__c</fullName>
        <description>Name of the product</description>
        <label>Account Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Winning Carrier / Vendor</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR 3</booleanFilter>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Competitor</value>
            </filterItems>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Competitor Account</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Vendor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunity Products</relationshipLabel>
        <relationshipName>Opportunity_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Benefit_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of a benefit agreement associated with an opportunity</description>
        <label>Benefit Agreement</label>
        <referenceTo>Benefit_Agreement__c</referenceTo>
        <relationshipLabel>Opportunity Products</relationshipLabel>
        <relationshipName>Opportunity_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Type__c</fullName>
        <description>Name of business type</description>
        <label>Business Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>Slice</fullName>
                </value>
                <value>
                    <fullName>Cede</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Carve_Out__c</fullName>
        <label>Carve Out?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Non-Medical</fullName>
                </value>
                <value>
                    <fullName>Medicare</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <description>Competitor Count</description>
        <formula>0</formula>
        <inlineHelpText>Competitor Count</inlineHelpText>
        <label>Competitor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product relationship</description>
        <label>Current Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Opportunity Products (Current Product)</relationshipLabel>
        <relationshipName>Opportunity_Products2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <formula>Opportunity_Name__r.Requested_Effective_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <formula>Opportunity_Name__r.Rate_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Excluded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if this product is not part of the opportunity Won / Renewed</description>
        <inlineHelpText>Check if this product is not part of the opportunity Won / Renewed</inlineHelpText>
        <label>Excluded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Funding_Type__c</fullName>
        <description>Funding type of the product on an opportunity</description>
        <label>Funding Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACAP</fullName>
                </value>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>PREM</fullName>
                </value>
                <value>
                    <fullName>COST</fullName>
                </value>
                <value>
                    <fullName>SERV</fullName>
                </value>
                <value>
                    <fullName>PAR</fullName>
                </value>
                <value>
                    <fullName>MPP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HCSC_Bid_Compared_to_Competitors__c</fullName>
        <description>Describes how the HCSC bid compares to the competitor bid.</description>
        <label>HCSC Bid Compared to Competitors</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>less than 5%</fullName>
                </value>
                <value>
                    <fullName>less than 10%</fullName>
                </value>
                <value>
                    <fullName>less than 15%</fullName>
                </value>
                <value>
                    <fullName>less than 20%</fullName>
                </value>
                <value>
                    <fullName>less than 25%</fullName>
                </value>
                <value>
                    <fullName>greater than 5%</fullName>
                </value>
                <value>
                    <fullName>greater than 10%</fullName>
                </value>
                <value>
                    <fullName>greater than 15%</fullName>
                </value>
                <value>
                    <fullName>greater than 20%</fullName>
                </value>
                <value>
                    <fullName>greater than 25%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incumbent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incumbent</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Competitor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunity Products (Incumbent)</relationshipLabel>
        <relationshipName>Opportunity_Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeadId__c</fullName>
        <label>LeadId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Count__c</fullName>
        <description>count of members</description>
        <label>Member Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Bid_Date__c</fullName>
        <description>The next anticipated date for bid on the product</description>
        <label>Next Bid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <description>Opportunity Name related to the Product</description>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Products</relationshipLabel>
        <relationshipName>Opportunity_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Other_Reason__c</fullName>
        <description>Free-form text to describe win/loss reason if &quot;Other&quot; is selected in &quot;Reason&quot; field</description>
        <label>Other Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premium_Type__c</fullName>
        <description>Defines type of premium when funding type of PREM is selected</description>
        <label>Premium Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Funding_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>PP</fullName>
                </value>
                <value>
                    <fullName>RP</fullName>
                </value>
                <value>
                    <fullName>RC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductPickList__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HMO Blue Adv IL</fullName>
                </value>
                <value>
                    <fullName>HMO Blue Adv  TX</fullName>
                </value>
                <value>
                    <fullName>PPO Blue Adv  IL</fullName>
                </value>
                <value>
                    <fullName>PPO Blue Adv  TX</fullName>
                </value>
                <value>
                    <fullName>Blue Decision IL</fullName>
                </value>
                <value>
                    <fullName>Blue Options   IL</fullName>
                </value>
                <value>
                    <fullName>Blue Options  MT</fullName>
                </value>
                <value>
                    <fullName>Blue Options  NM</fullName>
                </value>
                <value>
                    <fullName>Blue Options  OK</fullName>
                </value>
                <value>
                    <fullName>Blue Options  TX</fullName>
                </value>
                <value>
                    <fullName>HMO Blue Precision    IL</fullName>
                </value>
                <value>
                    <fullName>PPO Blue Preferred    OK</fullName>
                </value>
                <value>
                    <fullName>PPO Blue Choice Select    IL</fullName>
                </value>
                <value>
                    <fullName>PPO Blue Choice Solution  TX</fullName>
                </value>
                <value>
                    <fullName>Dental - Dentacap IL</fullName>
                </value>
                <value>
                    <fullName>Dental - Dentacap HMO TX</fullName>
                </value>
                <value>
                    <fullName>HMO   IL</fullName>
                </value>
                <value>
                    <fullName>HMO   MT</fullName>
                </value>
                <value>
                    <fullName>HMO   NM</fullName>
                </value>
                <value>
                    <fullName>HMO   OK</fullName>
                </value>
                <value>
                    <fullName>HMO   TX</fullName>
                </value>
                <value>
                    <fullName>Dental - HMO  IL</fullName>
                </value>
                <value>
                    <fullName>HIB   TX</fullName>
                </value>
                <value>
                    <fullName>Grp Med D Wrap    IL</fullName>
                </value>
                <value>
                    <fullName>Grp Med D Wrap    TX</fullName>
                </value>
                <value>
                    <fullName>Grp Med Supp Standard TX</fullName>
                </value>
                <value>
                    <fullName>Grp Med Supp Custom   IL</fullName>
                </value>
                <value>
                    <fullName>Grp Med Supp Custom   OK</fullName>
                </value>
                <value>
                    <fullName>Grp Med Supp Custom   TX</fullName>
                </value>
                <value>
                    <fullName>POS   NM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <description>Name of product category</description>
        <formula>TEXT(Product__r.Product_Category__c)</formula>
        <label>Product Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <description>Name of product family related to the Opportunity product</description>
        <formula>TEXT(Product__r.Family)</formula>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Stage_Formula__c</fullName>
        <formula>IF( Product__r.Non_Medical_Compensation__c , CASE(  Status__c  , &quot;Won&quot;, &quot;Closed Won&quot;, &quot;Lost&quot;, TEXT(Product_Stage__c), &quot;&quot;), &quot;&quot;)</formula>
        <label>Product Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Stage__c</fullName>
        <label>Product Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Proposal</fullName>
                </value>
                <value>
                    <fullName>Finalist Presentation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>State__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>New Sale</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Upsell</fullName>
                </value>
                <value>
                    <fullName>Add-On Gain</fullName>
                </value>
                <value>
                    <fullName>Add-On Loss</fullName>
                </value>
                <value>
                    <fullName>Market Check</fullName>
                </value>
                <value>
                    <fullName>Upsell – IL</fullName>
                </value>
                <value>
                    <fullName>Product Term</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product related to the opportunity record</description>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Product2.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>Service</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Opportunity Products</relationshipLabel>
        <relationshipName>Opportunity_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Projected_Contracts__c</fullName>
        <label>Expected Contracts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_Members__c</fullName>
        <description>Projected number of members on the opportunity product</description>
        <label>Expected Members</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RX_Tracking_Id__c</fullName>
        <description>Used in the AddOpportunityProducts VF Page and the AddOpportunityProductsController Apex Class. Placeholder for an existing Product Tracking related entry.  Not to be used on a Page Layout.</description>
        <label>RX Tracking Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RX__c</fullName>
        <description>Used in the AddOpportunityProducts VF Page and the AddOpportunityProductsController Apex Class.  Not to be used on any Page Layout</description>
        <label>RX Tracking</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <description>Reason why we did not win the opportunity product</description>
        <label>Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Cost Not Competitive</fullName>
                </value>
                <value>
                    <fullName>Not Able to Meet Request</fullName>
                </value>
                <value>
                    <fullName>Headquarters Relocated</fullName>
                </value>
                <value>
                    <fullName>Care Management</fullName>
                </value>
                <value>
                    <fullName>Relationship w/Consultant</fullName>
                </value>
                <value>
                    <fullName>Not Moving This Year</fullName>
                </value>
                <value>
                    <fullName>No Difference b/ween Networks</fullName>
                </value>
                <value>
                    <fullName>Negative Experience with Blues</fullName>
                </value>
                <value>
                    <fullName>Prior Experience with Blues</fullName>
                </value>
                <value>
                    <fullName>Network Access</fullName>
                </value>
                <value>
                    <fullName>Chose Not to Go on Exchange</fullName>
                </value>
                <value>
                    <fullName>Group Couldn&apos;t Make a Decision</fullName>
                </value>
                <value>
                    <fullName>Repricing</fullName>
                </value>
                <value>
                    <fullName>Product Packaging</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Did Not Want to Disrupt EES</fullName>
                </value>
                <value>
                    <fullName>Consumer Tools</fullName>
                </value>
                <value>
                    <fullName>No Details Given by Consultant</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Relationship</fullName>
                </value>
                <value>
                    <fullName>Network Disruption</fullName>
                </value>
                <value>
                    <fullName>Purchase by Another Company</fullName>
                </value>
                <value>
                    <fullName>Organizational Changes</fullName>
                </value>
                <value>
                    <fullName>Formulary Disruption</fullName>
                </value>
                <value>
                    <fullName>Decision Not to Continue RFP</fullName>
                </value>
                <value>
                    <fullName>Lack of Narrow Network</fullName>
                </value>
                <value>
                    <fullName>Competitor Ancillary Business</fullName>
                </value>
                <value>
                    <fullName>412-Misc.-Reputation of Selected Carrier</fullName>
                </value>
                <value>
                    <fullName>413-Misc.-Broker Recommendation</fullName>
                </value>
                <value>
                    <fullName>414-Misc.-Consol. Covg with 1 Carrier</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <label>Record Type Name</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Split__c</fullName>
        <label>Split?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NM</fullName>
                </value>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>TX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Sales status of opportunity product</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Won</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>GeoAccess/Discount Analysis/Proposal Provided</fullName>
                </value>
                <value>
                    <fullName>Pricing/Presentation to Client</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Migrated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Upsell__c</fullName>
        <label>Upsell?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Weighted_Member__c</fullName>
        <formula>Projected_Members__c *  Win_Probability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weighted Member</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Win_Probability__c</fullName>
        <description>Probability of winning the opportunity product</description>
        <label>Win Probability %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Winning_Carrier_Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Carrier / vendor who won the product if it is marked as &quot;Lost&quot;</description>
        <label>Winning Carrier / Vendor</label>
        <referenceTo>Competitor_Relationship__c</referenceTo>
        <relationshipLabel>Winning Carrier/Vendor</relationshipLabel>
        <relationshipName>Opportunity_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Opportunity Product</label>
    <nameField>
        <displayFormat>OP-{000}</displayFormat>
        <label>OP #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Products</pluralLabel>
    <recordTypes>
        <fullName>New_Sale</fullName>
        <active>true</active>
        <label>New Sale</label>
    </recordTypes>
    <recordTypes>
        <fullName>Off_Cycle_Change</fullName>
        <active>true</active>
        <label>Off-Cycle Change</label>
    </recordTypes>
    <recordTypes>
        <fullName>Renewal</fullName>
        <active>true</active>
        <label>Renewal</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Add_On_Loss_Must_Be_Negative</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL(Product_Type__c, &apos;Add-On Loss&apos;), Projected_Members__c &gt; -1)</errorConditionFormula>
        <errorDisplayField>Projected_Members__c</errorDisplayField>
        <errorMessage>For Add On Loss, members must be negative</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Add_On_Loss_Must_Be_Negative_Contracts</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL(Product_Type__c, &apos;Add-On Loss&apos;), Projected_Contracts__c &gt; -1)</errorConditionFormula>
        <errorDisplayField>Projected_Contracts__c</errorDisplayField>
        <errorMessage>For Add On Loss, contracts must be negative</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cant_Add_Opportunity_Products</fullName>
        <active>false</active>
        <description>Products cannot be added or removed on Won Opportunities</description>
        <errorConditionFormula>ISPICKVAL(Opportunity_Name__r.StageName , &quot;Won&quot;)</errorConditionFormula>
        <errorMessage>Products cannot be added or removed on Won Opportunities</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Incumbent_Required_For_Certain_Types</fullName>
        <active>false</active>
        <description>The Incumbent field should be required if the value in the Type field is New Sale, Upsell, Upsell - IL, or Market Check</description>
        <errorConditionFormula>IF(
AND(
Not($Setup.Ignore_Validations__c.Ignore_Validation__c),
OR(
ISPICKVAL(Product_Type__c, &quot;New Sale&quot;),
ISPICKVAL(Product_Type__c, &quot;Upsell&quot;),
ISPICKVAL(Product_Type__c, &quot;Market Check&quot;),
ISPICKVAL(Product_Type__c, &quot;Upsell – IL&quot;)
),
ISBLANK(Incumbent__c)
), true, false
)</errorConditionFormula>
        <errorMessage>The Incumbent field must be populated for products of Type New Sale, Upsell, Upsell - IL, or Market Check</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Next_Bid_Date_Future_Only</fullName>
        <active>true</active>
        <description>Verifies that the Next Bid Date value is set in the future.</description>
        <errorConditionFormula>AND(Next_Bid_Date__c &lt;= TODAY(), ISCHANGED(Next_Bid_Date__c ))</errorConditionFormula>
        <errorMessage>The Next Bid Date value must be a future date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Winning_Carrier_Not_Required_Won_Prod</fullName>
        <active>true</active>
        <description>If the product&apos;s status is won the winning carrier / vendor field should not be filled out</description>
        <errorConditionFormula>AND( 
ISPICKVAL(Status__c, &apos;Won&apos;), 
NOT(ISBLANK( Account__c )) 
)</errorConditionFormula>
        <errorDisplayField>Winning_Carrier_Vendor__c</errorDisplayField>
        <errorMessage>If the product is won the Winning Carrier / Vendor Field should not be filled out</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Winning_Carrier_Required_Lost_Product</fullName>
        <active>true</active>
        <description>When a product is lost the winning carrier field needs to be filled out.</description>
        <errorConditionFormula>AND(
ISPICKVAL(Status__c, &apos;Lost&apos;),
ISBLANK( Account__c ) 
)</errorConditionFormula>
        <errorDisplayField>Winning_Carrier_Vendor__c</errorDisplayField>
        <errorMessage>If stage is Lost, enter the Winning Carrier field for Opportunity Product.</errorMessage>
    </validationRules>
</CustomObject>